--- a/ads_config.json
+++ b/ads_config.json
@@ -1,34 +1,34 @@
 {
   "interstitial": {
-    "enabled": true,
+    "enabled": false,
     "ad_unit_ids": [
       "ca-app-pub-3940256099942544/4411468910",
       "ca-app-pub-3940256099942544/4411468910"
     ]
   },
   "native": {
-    "enabled": true,
+    "enabled": false,
     "ad_unit_ids": [
       "ca-app-pub-3940256099942544/3986624511",
       "ca-app-pub-3940256099942544/3986624511"
     ]
   },
   "banner": {
-    "enabled": true,
+    "enabled": false,
     "ad_unit_ids": [
       "ca-app-pub-3940256099942544/6300978111",
       "ca-app-pub-3940256099942544/2934735716"
     ]
   },
   "reward": {
-    "enabled": true,
+    "enabled": false,
     "ad_unit_ids": [
       "ca-app-pub-3940256099942544/5224354917",
       "ca-app-pub-3940256099942544/1712485313"
     ]
   },
   "app_open": {
-    "enabled": true,
+    "enabled": false,
     "ad_unit_ids": [
       "ca-app-pub-3940256099942544/5575463023"
     ]
