--- a/ads_config.json
+++ b/ads_config.json
@@ -1,36 +1,36 @@
 {
   "interstitial": {
-    "enabled": false,
+    "enabled": true,
     "ad_unit_ids": [
-      "ca-app-pub-3940256099942544/4411468910",
-      "ca-app-pub-3940256099942544/4411468910"
+      "ca-app-pub-4025933333679529/1851251605",
+      "ca-app-pub-4025933333679529/1851251605"
     ]
   },
   "native": {
-    "enabled": false,
+    "enabled": true,
     "ad_unit_ids": [
-      "ca-app-pub-3940256099942544/3986624511",
-      "ca-app-pub-3940256099942544/3986624511"
+      "ca-app-pub-4025933333679529/5775605624",
+      "ca-app-pub-4025933333679529/5775605624"
     ]
   },
   "banner": {
-    "enabled": false,
+    "enabled": true,
     "ad_unit_ids": [
-      "ca-app-pub-3940256099942544/6300978111",
-      "ca-app-pub-3940256099942544/2934735716"
+      "ca-app-pub-4025933333679529/6639145052",
+      "ca-app-pub-4025933333679529/6639145052"
     ]
   },
   "reward": {
-    "enabled": false,
+    "enabled": true,
     "ad_unit_ids": [
       "ca-app-pub-3940256099942544/5224354917",
       "ca-app-pub-3940256099942544/1712485313"
     ]
   },
   "app_open": {
-    "enabled": false,
+    "enabled": true,
     "ad_unit_ids": [
-      "ca-app-pub-3940256099942544/5575463023"
+      "ca-app-pub-4025933333679529/9749374182"
     ]
   }
 }
