--- a/ads_config.json
+++ b/ads_config.json
@@ -1,10 +1,18 @@
 {
   "interstitial": {
     "enabled": true,
-    "ad_unit_ids": [
-      "ca-app-pub-4025933333679529/1851251605",
-      "ca-app-pub-4025933333679529/1851251605"
-    ]
+    "onboarding_1": {
+      "enabled": false,
+      "ad_unit_id": "ca-app-pub-4025933333679529/1111111111"
+    },
+    "onboarding_2": {
+      "enabled": false,
+      "ad_unit_id": "ca-app-pub-4025933333679529/2222222222"
+    },
+    "onboarding_3": {
+      "enabled": false,
+      "ad_unit_id": "ca-app-pub-4025933333679529/3333333333"
+    }
   },
   "native": {
     "enabled": true,
