--- a/ads_config.json
+++ b/ads_config.json
@@ -1,4 +1,4 @@
-  "interstitial": {
+{  "interstitial": {
     "enabled": true,
     "ad_unit_ids": [
       "ca-app-pub-4025933333679529/1851251605",
